adding bower to start script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "license": "ISC",
   "scripts": {
-    "start": "node app.js",
+    "start": "bower i && node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
