--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.5.8"
+    "angular": "^1.5.8",
+    "angular-ui-router": "ui-router#^0.3.2",
+    "satellizer": "^0.15.5",
+    "angular-resource": "^1.5.8"
   }
 }
