--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.6",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "request-promise": "^4.1.1"
   },
   "engines": {
     "node": "6.8.0"
