--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,8 @@
     "satellizer": "^0.15.5",
     "angular-resource": "^1.5.8",
     "bootstrap": "4.0.0-alpha.5",
-    "bourbon": "^4.2.7"
+    "bourbon": "^4.2.7",
+    "textAngular": "^1.5.13",
+    "ngSanitize": "^0.0.2"
   }
 }
