--- a/bower.json
+++ b/bower.json
@@ -22,13 +22,13 @@
     "angular-resource": "^1.5.8",
     "bootstrap": "4.0.0-alpha.5",
     "bourbon": "^4.2.7",
-    "angular-elevator": "*"
+    "angular-elevator": "*",
+    "textAngular": "^1.5.13",
+    "ngSanitize": "https://github.com/gdi2290/ngSanitize.git#0.0.2"
   },
   "resolutions": {
-    "angular": "^1.5.8"
-
+    "angular": "^1.5.8",
     "textAngular": "^1.5.13",
     "ngSanitize": "^0.0.2"
-
   }
 }
