--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "bower install"
   },
   "dependencies": {
+    "aws-sdk": "^2.7.5",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "bower": "^1.8.0",
@@ -15,7 +16,8 @@
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.6",
     "morgan": "^1.7.0",
-    "request-promise": "^4.1.1"
+    "request-promise": "^4.1.1",
+    "uuid": "^3.0.0"
   },
   "engines": {
     "node": "6.8.0"
