--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.6.6",
     "morgan": "^1.7.0",
+    "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "uuid": "^3.0.0"
   },
