--- a/bower.json
+++ b/bower.json
@@ -24,5 +24,8 @@
     "bourbon": "^4.2.7",
     "textAngular": "^1.5.13",
     "ngSanitize": "^0.0.2"
+  },
+  "resolutions": {
+    "angular": "1.6.1"
   }
 }
