--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "ngSanitize": "^0.0.2"
   },
   "resolutions": {
-    "angular": "1.6.1"
+    "angular": "1.6.1",
+    "bootstrap": "4.0.0-alpha.5"
   }
 }
