--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wdi23-project3",
+  "name": "project-3-trail",
   "version": "1.0.0",
   "main": "app.js",
   "license": "ISC",
@@ -21,7 +21,7 @@
     "uuid": "^3.0.0"
   },
   "engines": {
-    "node": "6.8.0"
+    "node": "6.9.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
